[project]
name = "langgraph-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-openai>=1.1.7",
    "langchain-opentutorial>=0.0.8",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.2",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
